package org.vidrec.videoservice.video;

public enum VideoSource {
    OWN,
    YOUTUBE
}