@startuml Video Service — Class Diagram
!theme plain
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam ClassBorderColor #888888
skinparam ClassBackgroundColor #F8F8F8

title Video Service — Class Diagram

package "video-service" {

  package "model" {
    enum VideoSource {
      OWN
      YOUTUBE
    }

    class Video {
      - id: String
      - title: String
      - description: String
      - categoryId: String
      - duration: Integer
      - source: VideoSource
      - youtubeId: String
      - uploaderId: UUID
      - s3Key: String
      - createdAt: LocalDateTime
    }

    class VideoTag {
      - videoId: String
      - tag: String
    }

    class Category {
      - id: String
      - name: String
    }

    Video "1" --> "many" VideoTag : has
    Video "many" --> "1" Category : belongs to
  }

  package "dto" {
    class VideoUploadRequest {
      + title: String
      + description: String
      + categoryId: String
      + tags: List<String>
      + file: MultipartFile
    }

    class VideoResponse {
      + id: String
      + title: String
      + description: String
      + category: String
      + tags: List<String>
      + source: String
      + youtubeId: String
      + duration: Integer
      + uploaderId: UUID
    }

    class WatchEventRequest {
      + userId: UUID
      + videoId: String
      + watchDuration: Integer
      + videoDuration: Integer
      + completionPct: Double
    }
  }

  package "controller" {
    class VideoController {
      - videoService: VideoService
      + uploadVideo(request: VideoUploadRequest): ResponseEntity
      + getVideo(videoId: String): VideoResponse
      + getUserVideos(userId: UUID): List<VideoResponse>
      + searchVideos(query: String): List<VideoResponse>
      + recordWatch(event: WatchEventRequest): ResponseEntity
      + likeVideo(userId: UUID, videoId: String, action: String): ResponseEntity
    }
  }

  package "service" {
    class VideoService {
      - videoRepository: VideoRepository
      - s3Service: S3Service
      - kafkaProducer: VideoEventProducer
      - youTubeService: YouTubeService
      + uploadVideo(request: VideoUploadRequest, uploaderId: UUID): Video
      + getVideoById(id: String): Video
      + getVideosByUploader(uploaderId: UUID): List<Video>
      + searchVideos(query: String): List<Video>
      + recordWatchEvent(event: WatchEventRequest): void
      + recordLikeEvent(userId: UUID, videoId: String, action: String): void
    }

    class S3Service {
      - s3Client: AmazonS3
      - bucketName: String
      + uploadFile(file: MultipartFile): String
      + getFileUrl(s3Key: String): String
      + deleteFile(s3Key: String): void
    }

    class YouTubeService {
      - apiKey: String
      + fetchVideosByCategory(category: String): List<Video>
      + fetchVideoById(youtubeId: String): Video
      + syncCatalog(): void
    }
  }

  package "kafka" {
    class VideoEventProducer {
      - kafkaTemplate: KafkaTemplate
      + publishVideoUploaded(video: Video): void
      + publishVideoWatched(event: WatchEventRequest): void
      + publishVideoLiked(userId: UUID, videoId: String, action: String): void
      + publishUserSearched(userId: UUID, query: String, clickedId: String): void
    }
  }

  package "repository" {
    interface VideoRepository {
      + findById(id: String): Optional<Video>
      + findByUploaderId(uploaderId: UUID): List<Video>
      + findByTitleContaining(query: String): List<Video>
      + findByCategoryId(categoryId: String): List<Video>
    }
  }

  VideoController --> VideoService
  VideoService --> VideoRepository
  VideoService --> S3Service
  VideoService --> YouTubeService
  VideoService --> VideoEventProducer
}

@enduml
